--- a/PlayerUI/PlayerUI.csproj
+++ b/PlayerUI/PlayerUI.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PlayerUI</RootNamespace>
     <AssemblyName>PlayerUI</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,10 +47,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Controlls\AnfitrionControls\InicioAnfitrionControl.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.designer.cs">
+    <Compile Include="Controlls\AnfitrionControls\InicioAnfitrionControl.Designer.cs">
+      <DependentUpon>InicioAnfitrionControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controlls\HuespedControls\BuscarPropiedadControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controlls\HuespedControls\BuscarPropiedadControl.Designer.cs">
+      <DependentUpon>BuscarPropiedadControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controlls\HuespedControls\MisReservasControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controlls\HuespedControls\MisReservasControl.Designer.cs">
+      <DependentUpon>MisReservasControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Form2.cs">
@@ -58,22 +77,61 @@
     <Compile Include="Form2.designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form3.cs">
+    <Compile Include="Forms\GradientPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controlls\HuespedControls\InicioHuespedControl.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form3.designer.cs">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <Compile Include="Controlls\HuespedControls\InicioHuespedControl.designer.cs">
+      <DependentUpon>InicioHuespedControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\LoginAnfitrion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LoginAnfitrion.Designer.cs">
+      <DependentUpon>LoginAnfitrion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\LoginCopia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LoginCopia.Designer.cs">
+      <DependentUpon>LoginCopia.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PanelUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PanelUsuario.Designer.cs">
+      <DependentUpon>PanelUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Controlls\AnfitrionControls\InicioAnfitrionControl.resx">
+      <DependentUpon>InicioAnfitrionControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controlls\HuespedControls\BuscarPropiedadControl.resx">
+      <DependentUpon>BuscarPropiedadControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controlls\HuespedControls\MisReservasControl.resx">
+      <DependentUpon>MisReservasControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form3.resx">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <EmbeddedResource Include="Controlls\HuespedControls\InicioHuespedControl.resx">
+      <DependentUpon>InicioHuespedControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoginAnfitrion.resx">
+      <DependentUpon>LoginAnfitrion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoginCopia.resx">
+      <DependentUpon>LoginCopia.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PanelUsuario.resx">
+      <DependentUpon>PanelUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -83,6 +141,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -96,6 +155,48 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fondo_login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clouds-upright-2x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clouds-upright-2x1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clouds-upright-2x2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo sin fondo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clouds-upright-2x3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clouds-upright-2x4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\huesped_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anfitrion_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\anfitrion_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\huesped_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logorosado.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ignorar.gitignore" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
