--- a/PlayerUI/PlayerUI.csproj
+++ b/PlayerUI/PlayerUI.csproj
@@ -78,6 +78,12 @@
       <DependentUpon>AgregarContraseña2.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Conexion.cs" />
+    <Compile Include="Forms\DatosAlojamiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DatosAlojamiento.Designer.cs">
+      <DependentUpon>DatosAlojamiento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,12 @@
     <Compile Include="Forms\LoginCopia.Designer.cs">
       <DependentUpon>LoginCopia.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\OpcionesAnfitrion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OpcionesAnfitrion.Designer.cs">
+      <DependentUpon>OpcionesAnfitrion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\PanelUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +141,12 @@
     <Compile Include="Forms\RegisterHuesped.Designer.cs">
       <DependentUpon>RegisterHuesped.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TipoResidencia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TipoResidencia.Designer.cs">
+      <DependentUpon>TipoResidencia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controlls\AnfitrionControls\InicioAnfitrionControl.resx">
@@ -146,6 +164,9 @@
     <EmbeddedResource Include="Forms\AgregarContraseña2.resx">
       <DependentUpon>AgregarContraseña2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DatosAlojamiento.resx">
+      <DependentUpon>DatosAlojamiento.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -161,6 +182,9 @@
     <EmbeddedResource Include="Forms\LoginCopia.resx">
       <DependentUpon>LoginCopia.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OpcionesAnfitrion.resx">
+      <DependentUpon>OpcionesAnfitrion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\PanelUsuario.resx">
       <DependentUpon>PanelUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -169,6 +193,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\RegisterHuesped.resx">
       <DependentUpon>RegisterHuesped.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TipoResidencia.resx">
+      <DependentUpon>TipoResidencia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
