--- a/PlayerUI/PlayerUI.csproj
+++ b/PlayerUI/PlayerUI.csproj
@@ -53,11 +53,23 @@
     <Compile Include="Controlls\AnfitrionControls\InicioAnfitrionControl.Designer.cs">
       <DependentUpon>InicioAnfitrionControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controlls\AnfitrionControls\MensajesAnfitrionControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controlls\AnfitrionControls\MensajesAnfitrionControl.Designer.cs">
+      <DependentUpon>MensajesAnfitrionControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controlls\AnfitrionControls\MisPropiedadesControl.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Controlls\AnfitrionControls\MisPropiedadesControl.Designer.cs">
       <DependentUpon>MisPropiedadesControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controlls\AnfitrionControls\ReservasRecibidasControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controlls\AnfitrionControls\ReservasRecibidasControl.Designer.cs">
+      <DependentUpon>ReservasRecibidasControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controlls\HuespedControls\BuscarPropiedadControl.cs">
       <SubType>Form</SubType>
@@ -153,8 +165,14 @@
     <EmbeddedResource Include="Controlls\AnfitrionControls\InicioAnfitrionControl.resx">
       <DependentUpon>InicioAnfitrionControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controlls\AnfitrionControls\MensajesAnfitrionControl.resx">
+      <DependentUpon>MensajesAnfitrionControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controlls\AnfitrionControls\MisPropiedadesControl.resx">
       <DependentUpon>MisPropiedadesControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controlls\AnfitrionControls\ReservasRecibidasControl.resx">
+      <DependentUpon>ReservasRecibidasControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controlls\HuespedControls\BuscarPropiedadControl.resx">
       <DependentUpon>BuscarPropiedadControl.cs</DependentUpon>
