--- a/PlayerUI/PlayerUI.csproj
+++ b/PlayerUI/PlayerUI.csproj
@@ -95,6 +95,12 @@
     <Compile Include="Forms\AgregarContraseña2.Designer.cs">
       <DependentUpon>AgregarContraseña2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AgregarReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AgregarReserva.Designer.cs">
+      <DependentUpon>AgregarReserva.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Conexion.cs" />
     <Compile Include="Forms\AgregarPropiedadForm.cs">
       <SubType>Form</SubType>
@@ -185,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AgregarContraseña2.resx">
       <DependentUpon>AgregarContraseña2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AgregarReserva.resx">
+      <DependentUpon>AgregarReserva.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AgregarPropiedadForm.resx">
       <DependentUpon>AgregarPropiedadForm.cs</DependentUpon>
